--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		<small style="display:block;font-size: 18px;color:#000;">Em até</small>
 		<strong style="display:block;font-size: 45px;line-height:45px;color: #ffc107;text-shadow: 1px 1px 1px #000;">3 vezes</strong>
 		<small style="display:block;font-size: 18px;color:#000;">no Cartão</small>
-		<small class="badge badge-warning"  style="display:block;font-size: 15px;margin-top:10px;">Com desconto de 5% para pagamento à vista</small>
+		<strong style="display:block;font-size: 15px;margin-top:10px;background-color:#ffc107;color:#000;">Desconto de 5% para pagamento à vista</strong>
 	  </div>
 	</div>
     <hr/>
